# another-mood

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  REFACTOR_PLAN.md  pyproject.toml
.claude/: settings.json
.devcontainer/: README.md  devcontainer-lock.json  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  fresh-deps.yml
dev-docs/: sbdb.yaml
dev-docs/contents/: data-catalog.yaml  index.md  phase8-tasks.yaml  tasks.yaml
dev-docs/contents/10-background/: 10-product.md  index.md
dev-docs/contents/20-design/: 10-architecture.md  40-json-data-model.md  45-prose-spec.md  46-blob-spec.md
dev-docs/contents/30-dev/: 10-setup.md  20-environment.md  50-release.md
dev-docs/contents/background/: another-mood-original.md  product.md  roadmap.md
dev-docs/contents/design/: architecture.md  index.md  json-data-model.md  pipeline.md
dev-docs/contents/dev/: environment.md  index.md  style-guide.md
dev-docs/contents/internal/: architecture.md  io-boundaries.md  json-data-model.md  mcp-server.md
dev-docs/definition/: reports.yaml  schema.yaml
dev-docs/definition/queries/: roadmap.yaml  tasks-by-phase.yaml  tasks.yaml
dev-docs/definition/schema/: tasks.yaml
dev-docs/definition/schemas/: data-catalog.yaml
dev-docs/definition/templates/: data-catalog.md  index.md  phase8-tasks.md  prose.md  roadmap.md  tasks.md
docs/: README.md  catalog.yaml  getting-started.md  guides.md  index.md  mcp-resources.yaml  mcp.md
docs-src/contents/: data-catalog.yaml  index.md  phase8-tasks.yaml
docs-src/contents/background/: product.md  roadmap.md
docs-src/contents/internal/: architecture.md  error-propagation.md  json-data-model.md
docs-src/definition/queries/: tasks-all.yaml
docs-src/definition/schema/: data-catalog.yaml  phase8-tasks.yaml
docs-src/definition/templates/: data-catalog.md  index.md  phase8-tasks.md  prose.md
docs/background/: product.md  roadmap.md
docs/conventions/: design.md  implementation.md  setup.md  workflow.md
docs/dev/: checks.md  environment.md  setup.md
docs/internal/: architecture.md  composer.md  generator.md  glossary.md  json-data-model.md  process-coordination.md  renderer.md  toc-redesign.md
docs/internal/components/: composer.md  generator.md  normalizer.md  renderer.md  yaml-loading.md
docs/internal/pipeline/: pipeline.md  process-coordination.md  stage-runner.md
docs/reference/: cli.md  content-formats.md  index.md  manifest.md  query-dsl.md  query.md  reports.md  schema.md  template.md
docs/reference/schemas/: content-schema.yaml  query-schema.yaml  reports-schema.yaml  schema-schema.yaml
example-project/: .gitignore
example-project/contents/: background.md  entities.yaml  entities_2.yaml  hello.md
example-project/contents/guides/: ordering.md
example-project/contents/sub/: nested.md
example-project/definition/schema/: entities.yaml  entities_2.yaml  relations.yaml
example-project/definition/templates/: entity-detail.md  erd.md  index.md
example-project/expected/: index.md
example-project/expected/entity-detail/: order.md  order_item.md  product.md  product_category.md  role.md  user.md  user_role.md
example-project/output/docs/: _index.md
example-project/output/rendered/: hugo.toml  index.html  index.xml  sitemap.xml
example-project/output/tocs/: entities.yaml
showcase/: index.yaml
showcase/ecommerce/definition/: schema.yaml
showcase/japanese-table-design/: sbdb.yaml
showcase/japanese-table-design/contents/: テーブル.yaml  型対応.yaml
showcase/japanese-table-design/definition/: reports.yaml  schema.yaml
showcase/music/: sbdb.yaml
showcase/music/contents/: albums.yaml  artists.yaml  background.md  genres.yaml  labels.yaml  playlist_tracks.yaml  playlists.yaml  tracks.yaml
showcase/music/definition/: reports.yaml  schema.yaml
showcase/starter/: sbdb.yaml
showcase/starter/contents/: about.md  members.yaml
showcase/starter/definition/: reports.yaml  schema.yaml
src/another_mood/: cli.py  command.py  config.py  layout.py  mcp_server.py
src/another_mood/components/: __init__.py
src/another_mood/pipeline/: base.py  render.py  stages.py  (+1 more)
src/reqs_builder/: atomic_dir_writer.py  cli.py  composer.py  config.py  context.py  json_data_model.py  normalizer.py  prose.py  yaml_dumper.py
tests/: test_atomic_dir_writer.py  test_command.py  test_composer.py  test_config.py  test_docs_sync.py  test_generator.py  test_json_data_model.py  test_layout.py  test_normalizer.py  test_page_writer.py  test_prose.py  test_query.py  test_section_extension.py  test_version.py  test_yaml_dumper.py
tests/pipeline/: test_atomic_dir_writer.py  test_preparation.py  test_renderer_prepare.py  test_write_once_sweep.py
(+362 files in other folders)
