[project]
name = "another-mood"
version = "0.1.0"
description = "A processor of source-based databases, keeping related documents in sync."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.25.2",
    "hugo>=0.155.3",
    "jinja2>=3.1",
    "markdown-it-py>=4.0.0",
    "mcp>=1.20",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0",
    "regex>=2026.4.4",
    "ruamel-yaml>=0.19.1",
    "typer>=0.24.1",
    "watchdog>=6.0.0",
]

[project.scripts]
mood = "another_mood.cli:main"
mood-mcp = "another_mood.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pre-commit>=4.5.1",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.7",
    "types-jsonschema>=4.26.0.20260325",
]

[tool.hatch.build.targets.wheel.force-include]
"showcase" = "another_mood/_showcase"
"docs" = "another_mood/_docs"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["another_mood.components"]
branch = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
extend-select = ["T20"]  # flake8-print: forbid print() / pprint()

# CLI is the boundary that turns business-logic return values into terminal
# output, so it is the only production module allowed to call print().
# Tests may print for ad-hoc debugging.
[tool.ruff.lint.per-file-ignores]
"src/another_mood/cli.py" = ["T201"]
"tests/**/*.py" = ["T201"]
